<resources>
    <string name="app_name">Lytics SDK Showcase</string>
    <string name="title_activity_demo">Lytics SDK Showcase</string>
    <string name="title_profile">Profile</string>
    <string name="title_events">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_settings">Settings</string>
    <string name="reset">Reset Demo App</string>
    <string name="reset_notification">Demo app reset!</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="logged_in">Logged in!</string>
    <string name="signed_up">Signed up!</string>
    <string name="gaid_prompt">Lytics Demo would like permission to track you across apps and websites owned by other companies. Your data will be used to improve your experience with better personalization.</string>
    <string name="allow_tracking">Allow Tracking</string>
    <string name="do_no_track">Ask App Not to Track</string>
    <string name="welcome">Welcome!</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_now">Not a member? Register now.</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create an account to get started</string>
    <string name="hint_name">Name</string>
    <string name="label_privacy_policy_checkbox">I have read and agree with the Terms and Conditions and the Privacy Policy.</string>
    <string name="register_button">Complete</string>
    <string name="label_gaid_checkbox">Improve my experience with better personalization (GAID demo).</string>
    <string name="near_you">Near you</string>
    <string name="popular">Popular</string>
    <string name="buy_tickets">Buy tickets</string>
    <string name="details">Details</string>
    <string name="tickets_bought">Tickets bought!</string>
</resources>