<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.events.EventsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/near_you_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/near_you"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/closest_event_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/near_you_label">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closest_event_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/maroon_5" />

            <com.google.android.material.chip.Chip
                android:id="@+id/closest_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                app:layout_constraintEnd_toEndOf="@id/closest_event_image"
                app:layout_constraintTop_toTopOf="@id/closest_event_image"
                tools:text="MAR 18" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/closest_event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintEnd_toStartOf="@id/closest_event_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/closest_event_image"
                tools:text="Maroon 5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/closest_event_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/closest_event_name"
                app:layout_constraintTop_toTopOf="@id/closest_event_name"
                tools:text="Dallas, TX" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/closest_event_buy_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/buy_tickets"
                app:layout_constraintTop_toBottomOf="@id/closest_event_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/popular_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/popular"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closest_event_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_events_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/popular_label"
            tools:itemCount="3"
            tools:listitem="@layout/list_item_event" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>